# localapp

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: build.rs  consts.rs  infer.rs  main.rs
