[package]
name = "localapp"
version = "0.1.6"
edition = "2021"
description = "Rust CLI to convert webpage into desktop app with tauri under 3 MB"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11", features = [
    "json",
    "blocking",
    "native-tls",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
regex = "1"
tempdir = { version = "0.3.7" }
once_cell = { version = "1.12.0" }
download_rs = { version = "0.2.0", features = ["sync_download"] }
log = "0.4"
tauri-cli = { version = "1.0.0-rc.13" }
substring = "1.4.5"
json = "0.12.4"
write-to-file = "1.0.2"
open = "1"
sanitize_html = "0.7.0"
site_icons = "0.1.11"
website-icon-extract = "0.5.0"